# rsg-espocrm

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG-2026-04-02.md  CHANGELOG.md  CLEANUP_SOFTDELETES_2026-06-18.md  COMMISSION-ENGINE-BRIDGE.md  COMMISSION-ENGINE-DEPLOY.md  COMMISSION-ENGINE-SUPABASE-CROSSWALK.md  COMMISSION-LEDGER-SYNC-CONTRACT.md  COMMISSION-WORKSPACE-DESIGN.md  CRM_CLEANUP_BRIEF.md  DATA_MODEL.md  DEPLOYMENT.md  HERMES_ESPO_ACCESS_TEST.md  KANBAN-IMPLEMENTATION-GUIDE.md  README.md  api-deploy.sh  apply-dashboard-templates.sh  deploy-to-crm.sh  espocrm-compare.code-workspace  export-espocrm.sh  pyproject.toml  test-api.sh
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md
.history-memo/: 2026-04-07.md
.qwen/: settings.json  settings.json.orig
automation_workers/: deterministic_committer.py
docs/: renewal-pipeline-ownership.md
entity-defs/: Contact.json  Opportunity.json
exports/: crm_fields_account_contact_policy.csv
field-reference/: NowCerts-Account-Sync-Mapping.md  Policy Entity — Complete Field Reference.md  custom-fields-camelcase-audit.csv  custom-fields-camelcase-audit.md  devin-review-findings.md  future-items-non-blocking.md  i18n-pass1-label-changes.md  i18n-pass1b-deliverable.md  i18n-phase1-applied-summary.md  layout-duplicate-hide-deliverable.md  metadata-naming-standard.md  modules-field-schema.deprecated.csv  modules-field-schema.deprecated.md  nowcerts-to-espocrm-mapping.md
hermes-mcp-bridge/: CRM_TRAINING_PROMPT.md  Dockerfile  README.md  app.py  (+2 more)
(+664 files in other folders)
