[project]
name = "rsg-espocrm-hermes"
version = "0.1.0"
description = "Hermes — EspoCRM coordinator (dispatcher, commands, auditing)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.28.0",
  "python-dotenv>=1.0.0",
  "slack-bolt>=1.18.0",
]

[project.scripts]
hermes = "hermes.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermes*"]
